[gd_scene load_steps=3 format=3 uid="uid://cachkyupiwfy8"]

[ext_resource type="AudioStream" uid="uid://c6mek1v4vndll" path="res://audio/low-spaceship-rumble-195722.mp3" id="1_hrteh"]
[ext_resource type="Script" path="res://scenes/custom_menu.gd" id="1_in8x4"]

[node name="custom_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_in8x4")

[node name="backround" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 755.0
color = Color(0.207843, 0.168627, 0.247059, 1)
metadata/_edit_lock_ = true

[node name="backroundmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_hrteh")
volume_db = 12.181
autoplay = true
bus = &"music"

[node name="start_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -430.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 134.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 70
text = "start game"

[node name="input" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 98.0
offset_right = 213.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 20
placeholder_text = "[input new value]"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 186.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 25
button_mask = 3
item_count = 4
selected = 0
popup/item_0/text = "health"
popup/item_0/id = 0
popup/item_1/text = "spawnrate"
popup/item_1/id = 1
popup/item_2/text = "laserchargespeed"
popup/item_2/id = 2
popup/item_3/text = "playeraccelleration"
popup/item_3/id = 3

[node name="highscore_reset_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -77.0
offset_right = -21.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "reset highscores"

[connection signal="button_down" from="start_button" to="." method="_on_start_button_button_down"]
[connection signal="focus_exited" from="input" to="." method="_on_input_focus_exited"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="button_down" from="highscore_reset_button" to="." method="_on_highscore_reset_button_button_down"]
